# arvancloud-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  release.yml  security.yml
deploy/: README.md
deploy/helm/arvancloud-mcp/: Chart.yaml  values.yaml
deploy/helm/arvancloud-mcp/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
deploy/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
examples/: README.md  inspect_server.py
scripts/: smoke_test.py
src/arvancloud_mcp/: __init__.py  __main__.py  catalog.py  client.py  config.py  guardrails.py  server.py
src/arvancloud_mcp/tools/: __init__.py  _base.py  _exec.py  cdn.py  common.py  compute.py  dns.py  docs.py  git.py  iac.py  k8s.py  live.py  net.py  network.py  notify.py  objectstorage.py  observability.py  provision.py  security.py  ssh.py  storage.py  tasks.py  vod.py
tests/: conftest.py  test_client.py  test_common.py  test_config.py  test_docs.py  test_git.py  test_guardrails.py  test_iac.py  test_k8s.py  test_net.py  test_notify.py  test_objectstorage.py  test_observability.py  test_provision.py  test_security.py  test_server.py  test_ssh.py  test_tasks.py
tests/live/: test_live.py
